--- a/_pages/media.html
+++ b/_pages/media.html
@@ -1,14 +1,13 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Media"
+permalink: /media/
 author_profile: true
 ---
 
 {% include base_path %}
 
-
-{% for post in site.portfolio %}
+{% for post in site.media %}
   {% include archive-single.html %}
 {% endfor %}
 
